--- a/ajax-store.html
+++ b/ajax-store.html
@@ -23,16 +23,22 @@
 
         <script>
             "use strict"
-
+            console.log("document loaded!")
             $(document).ready(function() {
+
+
+
                 // TODO: Create an AJAX GET request for the file under data/inventory.json
-                $.get(' data/inventory.json')
+
+                $.get('data/inventory.json')
                     .done(handleResponse);
+
 
                 // TODO: Take the data from inventory.json and append it to the products table
                 //       HINT: Your data should come back as a JSON object; use console.log() to inspect
                 //             its contents and fields
                 //       HINT: You will want to target #insertProducts for your new HTML elements
+
 
                 function handleResponse(items) {
                     let html = "";
@@ -53,6 +59,10 @@
                     console.log(html);
                     $('#items').html(html);
                 }
+
+                // $.get("coffee.json")
+
+
 
             })();
         </script>
